--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-plugin-macros": "^2.8.0",
     "babel-plugin-minify-dead-code-elimination": "^0.5.1",
     "babel-plugin-module-resolver": "^4.0.0",
+    "babel-plugin-transform-async-to-promises": "^0.8.15",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24"
   },
